# datacleanup

./: .dockerignore  .env.example  .gitignore  bootstrap_mvp.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
datacleanup/: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  alerts.yml  cloudrun.yaml  haproxy.cfg  prometheus.yml
datacleanup/.github/workflows/: docker-build.yml
datacleanup/docs/: infrastructure.md
datacleanup/examples/: n8n_workflow.json
datacleanup/helm/: Chart.yaml  values-production.yaml
datacleanup/src/: cli.py  validation.py
datacleanup/src/config/: costs.py
datacleanup/src/core/: config.py  logging.py  metrics.py
datacleanup/src/io/: readers.py  schemas.py  writers.py
datacleanup/src/services/: categorizer.py  pdf_generator.py
datacleanup/tests/: test_api_integration.py  test_hybrid_categorizer.py
docs/: cost-analysis.md
helm/: values.yaml
helm/templates/: deployment.yaml
monitoring/: prometheus.yml
scripts/: backup.sh  run_worker.py
src/: cli.py  main.py  validation.py
src/api/: dependencies.py  routes_clean.py
src/api/routes/: jobs.py  upload.py
src/config/: costs.py
src/core/: jobs.py
src/io/: storage.py  urls.py
src/security/: upload_guard.py
src/services/: categorizer.py  cleaning.py  colmap.py  dedupe.py  diff.py  export_excel.py  formatting.py  merge.py  pdf_report.py
src/worker/: run_job.py
tests/: test_cost_savings.py  test_pdf_generator.py
