[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleanup-microservice"
version = "2.0.0"
description = "AI-powered spreadsheet cleaning with hybrid cost optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DataCleanup Team", email = "hello@datacleanup.com"},
]
maintainers = [
    {name = "DataCleanup Team", email = "hello@datacleanup.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["data-cleaning", "csv", "excel", "ai", "microservice", "fastapi"]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.3",
    "openai>=1.3.8",
    "transformers>=4.36.2",
    "torch>=2.1.2",
    "reportlab>=4.0.7",
    "matplotlib>=3.8.2",
    "prometheus-client>=0.19.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]
prod = [
    "gunicorn>=21.2.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
]

[project.urls]